Zaktualizowano mechanizm aktualizacji danych uzytkownika w UserService, usprawniono walidacje w UserUpdateDto oraz poprawiono metody aktualizacji w UserController, zapewniajc lepsze mapowanie danych i obsluge bledów, co zwieksza dokladnosc sprawdzania danych wejsciowych i niezawodnosc operacji.