@@ -1,6 +1,8 @@
 package com.capgemini.wsb.fitnesstracker.user.internal;
 
 import com.capgemini.wsb.fitnesstracker.user.api.User;
+import com.capgemini.wsb.fitnesstracker.user.api.UserService;
+import com.capgemini.wsb.fitnesstracker.user.api.UserUpdateDto;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.ResponseEntity;
@@ -8,22 +10,24 @@ import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
 
+import static java.util.stream.Collectors.toList;
+
 @Slf4j
 @RestController
 @RequestMapping("/v1/users")
 @RequiredArgsConstructor
-class UserController {
+public class UserController {
 
-    private final UserServiceImpl userService;
-
+    private final UserService userService;
     private final UserMapper userMapper;
+    private User updatedUser;
 
     @GetMapping
     public List<UserDto> getAllUsers() {
         return userService.findAllUsers()
                           .stream()
                           .map(userMapper::toDto)
-                          .toList();
+                          .collect(toList());
     }
 
     @PostMapping
@@ -34,4 +38,9 @@ class UserController {
         return ResponseEntity.ok(userMapper.toDto(savedUser));
     }
 
+   @PutMapping("/{id}")
+    public ResponseEntity<UserDto> updateUser(@PathVariable Long id, @RequestBody UserUpdateDto userUpdateDto) {
+        User updatedUser = userService.updateUser(id, userUpdateDto);
+        return ResponseEntity.ok(userMapper.toDto(updatedUser));
+    }
 }
